# BloomSearch

./: CMakeLists.txt  README.md  bloom.py  bloomEquations.py  insert.cpp  sampleNames.txt  search.cpp  util.cpp
hash/: fastfnv64a.h
src/: insert.cpp  search.cpp  searchName.cpp  util.cpp  util.h
